# terrastudio

./: .gitignore  .mcp.json  .release-please-manifest.json  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  tsconfig.base.json  turbo.json  vitest.workspace.ts
.github/workflows/: ci.yml  nightly.yml  release.yml
apps/desktop/: CHANGELOG.md  README.md  package.json  svelte.config.js  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  security.rs
apps/desktop/src-tauri/src/azure/: commands.rs
apps/desktop/src-tauri/src/git/: commands.rs  mod.rs  runner.rs
apps/desktop/src-tauri/src/mcp/: commands.rs  manifest.rs  mod.rs  server.rs  types.rs
apps/desktop/src-tauri/src/project/: commands.rs  mod.rs  recent.rs  secrets.rs  templates.rs
apps/desktop/src-tauri/src/terraform/: commands.rs  runner.rs
docs/: architecture.md  git-integration.md  hcl-generation.md  implementation-roadmap.md  platform-architecture-plan.md  plugin-system.md  prd-phase-24-mcp-server.md  project-structure.md  resource-audit-criteria.md  type-interfaces.md
docs/specs/: SPEC-001-mcp-server.md  bottom-panel-system.md  canvas-search.md  connection-wizard.md  cost-breakdown.md  dark-mode-accessibility.md  dependency-graph-view.md  diagram-annotations.md  localization-i18n.md  smart-resource-duplication.md  (+2 more)
scripts/: install.ps1  install.sh  release.mjs  version-bump.mjs
(+490 files in other folders)
