[package]
name = "app"
version = "0.12.0"
description = "TerraStudio - Visual infrastructure diagram builder"
authors = ["afroze9 <afrozeamjad@gmail.com>"]
license = "AGPL-3.0-only"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["process", "io-util", "fs", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
dirs = "6"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-notification = "2"
tokio-tungstenite = "0.24"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["local-offset"] }
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
